# nes-emulator

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  Makefile_old  README.md  main.c  opcodes.h  riscv-toolchain.cmake
dev/: debug.c  debug.h  sdl-instance.c  sdl-instance.h
dtekv-build/: COPYING  dtekv-lib.c  dtekv-lib.h  dtekv-script.lds
dtekv-drivers/: nes-controller.c  nes-controller.h  vga-screen.c  vga-screen.h
emulator/: common.c  common.h  console.h  cpu.c  cpu.h  cpu_mem.c  cpu_mem.h  cpu_memory.c  cpu_memory.h  emulator.c  emulator.h  gfx.c  gfx.h  load_rom.c  load_rom.h  main.c  mapper.c  mapper.h  mem.c  mem.h  opcodes.h  ppu.c  ppu.h  ppu_mem.c  ppu_mem.h  timer.c  timer.h  util.c  util.h
sdl/: sdl-gfx.c  sdl-gfx.h  sdl-instance.c  sdl-instance.h  sdl-keyboard-input.c  sdl-keyboard-input.h
tests/: output.txt
